Day-05-Kubernetes/Project-41/k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-41-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: project-41-backend
  template:
    metadata:
      labels:
        app: project-41-backend
    spec:
      containers:
        - name: backend
          image: project-41-backend:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: project-41-backend
spec:
  selector:
    app: project-41-backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
