Day-05-Kubernetes/Project-41/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-41-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: project-41-frontend
  template:
    metadata:
      labels:
        app: project-41-frontend
    spec:
      containers:
        - name: frontend
          image: project-41-frontend:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: project-41-frontend
spec:
  selector:
    app: project-41-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
