Day-05-Kubernetes/Project-41/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-41-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: project41.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: project-41-frontend
                port:
                  number: 80
